# AsterVec

./: .dockerignore  .gitignore  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: publish.yml
docs/: API_REFERENCE.md  HTTP_API.md  METADATA_FILTERING_DESIGN.md  METADATA_FILTERING_PLAN.md  METADATA_FILTERING_SURVEY.md  PHASE_A_BENCHMARK_RESULTS.md  python_sdk_guide.md
examples/: embed_quickstart.py  http_quickstart.sh
include/: astervec_db.h  astervec_http.h  astervec_index.h  astervec_rnn_descent.h  bloom_filter.h  cgroup_monitor.h  config.h  disk_vector.h  distance.h  hash_sampler.h  id_types.h  logger.h  lsm_vec_db.h  lsm_vec_http.h  lsm_vec_index.h  lsm_vec_rnn_descent.h  metadata.h  metadata_store.h  statistics.h  utils.h
python/: astervec_pybind.cc  lsm_vec_pybind.cc
python/tests/: test_bulk_build.py  test_metadata.py
src/: astervec_bulk_build.cc  astervec_db.cc  astervec_http.cc  astervec_http_main.cc  astervec_index.cc  astervec_rnn_descent.cc  bloom_filter.cc  lsm_vec_bulk_build.cc  lsm_vec_db.cc  lsm_vec_http.cc  lsm_vec_http_main.cc  lsm_vec_index.cc  lsm_vec_rnn_descent.cc  metadata.cc  metadata_store.cc  utils.cc
test/: Makefile  README.md  concurrent_search_bench.cc  python_example.py  test.cc
test/unit/: CMakeLists.txt  metadata_store_fixture.h  test_astervec_db_delete_cascade.cc  test_astervec_db_insert_metadata.cc  test_astervec_resolvers.cc  test_bloom_filter.cc  test_bulk_build.cc  test_concurrent_insert_torture.cc  test_concurrent_search.cc  test_concurrent_upsert_race.cc  test_delete_persistence.cc  test_delete_robust_red.cc  test_delete_stress.cc  test_filtered_search.cc  test_filtered_search_no_regression.cc  test_insert_qps_baseline.cc  test_lsm_vec_db_delete_cascade.cc  test_lsm_vec_db_insert_metadata.cc  test_lsm_vec_resolvers.cc  test_metadata_backward_compat.cc  test_metadata_store_basic.cc  test_metadata_store_update.cc  test_payload_crud.cc  test_predicate_comparison.cc  test_predicate_eq.cc  test_predicate_exists_contains.cc  test_predicate_logical.cc  test_predicate_parse.cc  test_predicate_parse_errors.cc  test_predicate_path.cc  test_predicate_set.cc  test_recall_baseline.cc  test_sanity.cc
tools/: concurrent_search_bench.cc
